authentication factor --> authentication strategy; remove unnecessary images

--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -54,14 +54,7 @@ Once you've selected the first methods you would like to try, click **Create App
 
 ## Making changes
 
-If your initial sign-in choices aren't working out or if you want to add more options for your users, you can make changes by navigating to the Clerk Dashboard and opening the **User & Authentication** drop down. From there, you can make changes to the necessary settings.
-
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/user-and-authentication.jpg"
-alt="The 'User and Authentication' section of the Clerk Dashboard, which defaults to the 'Email, Phone, Username' tab."
-/>
+If your initial sign-in choices aren't working out or if you want to add more options for your users, you can make changes by navigating to the Clerk Dashboard and opening the **User & Authentication** drop down. From there, you can make changes to the necessary settings. For example, if you decide you would like to add GitHub as a social login provider, you can do so by navigating to the [**Social Connections**](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) page and toggling on the GitHub provider.
 
 ## Sign-in examples
 
@@ -108,13 +101,13 @@ alt="The 'Email address' configuration settings with all options toggled on, and
 
 ### Allow passwordless sign-in
 
-In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication factors** section, toggle on **Email verification link** and **Email verification code**. This will allow users to sign in with either a link or a code sent to their email.
+In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication strategies** section, toggle on **Email verification link** and **Email verification code**. This will allow users to sign in with either a link or a code sent to their email.
 
 <Images 
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-address-verification.jpg"
-alt="The 'Authentication factors' section under 'Email, Phone, Username' tab with a red arrow pointing to the 'Email verification link' toggle and 'Email verification code, both toggled on. There is also a red arrow pointing to the 'Apply changes' button."
+alt="The 'Authentication strategies' section under 'Email, Phone, Username' tab with a red arrow pointing to the 'Email verification link' toggle and 'Email verification code, both toggled on. There is also a red arrow pointing to the 'Apply changes' button."
 />
 
 ### Finished!
@@ -174,13 +167,13 @@ alt="The 'Phone number' configuration settings with all options toggled on."
 
 ### Allow users to sign in with an SMS code
 
-In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication factors** section, toggle on **SMS verification code**. This will allows users to sign in with a code sent to their phone.
+In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication strategies** section, toggle on **SMS verification code**. This will allows users to sign in with a code sent to their phone.
 
 <Images 
 width={3024}
 height={1652}
 src="/docs/images/authentication/sms-verification.jpg"
-alt="The 'Authentication factors' section under 'Email, Phone, Username' tab with a red arrow pointing to the 'SMS Verifcation Code' toggle, toggled on. There is also a red arrow pointing to the 'Apply changes' button."
+alt="The 'Authentication strategies' section under 'Email, Phone, Username' tab with a red arrow pointing to the 'SMS Verifcation Code' toggle, toggled on. There is also a red arrow pointing to the 'Apply changes' button."
 />
 
 ### Finished!
