--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -28,14 +28,7 @@ The rest of this guide will explain how to set up passwordless authentication us
 
 ## Configuration
 
-Passwordless authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication factors** section of this page, choose one of the available passwordless authentication strategies that send one-time codes.
-
-<Images 
-  width={3024}
-  height={1654}
-  src="/docs/images/custom-flows/authentication-factors.jpg"
-  alt="The 'Email, Phone, and Username' page in the Clerk dashboard. There is a red box around the 'Authentication factors' section of the page."
-/>
+Passwordless authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication strategies** section of this page, choose one of the available passwordless authentication strategies that send one-time codes.
 
 For more information on how to configure passwordless authentication, check out the [Sign-in options](/docs/authentication/configuration/sign-in-options) guide.
 
