--- a/docs/authentication/configuration/sign-up-options.mdx
+++ b/docs/authentication/configuration/sign-up-options.mdx
@@ -48,18 +48,11 @@ For each provider, Clerk offers a shared profile that can be used for developmen
 
 ## Choose Web3 authentication
 
-Clerk provides [Web3 authentication](/docs/users/web3) as an option with MetaMask. As part of validating the accuracy of the returned Web3 account address, Clerk handles the signing of a transaction and verifying the signature. Because sign-in with MetaMask uses the same abstraction as our other authentication factors, like passwords or magic links, other Clerk features like multi-factor authentication and profile enrichment work for MetaMask users out-of-the-box.
+Clerk provides [Web3 authentication](/docs/users/web3) as an option with MetaMask. As part of validating the accuracy of the returned Web3 account address, Clerk handles the signing of a transaction and verifying the signature. Because sign-in with MetaMask uses the same abstraction as our other authentication strategies, like passwords or magic links, other Clerk features like multi-factor authentication and profile enrichment work for MetaMask users out-of-the-box.
 
 ## Set up multifactor authentication
 
 Although not available as an option in the initial new application screen, you can opt to turn on multifactor authentication (MFA) from the configuration screen. In the Clerk Dashboard, go to **User & Authentication > [Multifactor](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor)** and toggle on the multi-factor options you would like to enable. For more information on how to set up multifactor authentication, check out our [detailed guide](/docs/custom-flows/mfa#overview).
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/custom-flows/multifactor.jpg"
-alt="The 'Multi-factor authentication' tab under the 'User & Authentication' section of the Clerk Dashboard."
-/>
 
 ## Set sign-up restrictions
 
