--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -45,13 +45,13 @@ We take care of the boring stuff, like efficient polling, secure session managem
 
 ## Configuration
 
-Magic link authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication factors** section of this page, choose **Email verification link** as the authentication factor.
+Magic link authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication strategies** section of this page, choose **Email verification link** as the authentication strategy.
 
 <Images 
   width={3024}
   height={1654}
-  src="/docs/images/custom-flows/email-verification-link.jpg"
-  alt="The 'Authentication factors' section of the 'Email, Phone, and Username' page in the Clerk dashboard. There is a red arrow pointing to the 'Email verification link' toggle, which is toggled on."
+  src="/docs/images/custom-flows/email-verification-link.webp"
+  alt="The 'Authentication strategies' section of the 'Email, Phone, and Username' page in the Clerk dashboard. There is a red arrow pointing to the 'Email verification link' toggle, which is toggled on."
 />
 
 Don't forget that you also need to make sure you've configured your application instance to request the user's email address. Users can receive magic links only via email messages. Make sure you toggle on **Email address** under the **Contact information** section. 
@@ -68,7 +68,7 @@ If you click on the **Settings cog** icon next to **Email address**, the email a
 You can also find the **Verification methods** section on this screen. Here, you can toggle on **Email verification link** if you would like to allow your users to verify their email with a magic link. You can also toggle on **Email verification code** if you would like to allow your users to verify their email with a one-time passcode.
 
 <Callout type="info">
-  **Verification methods** are different from **Authentication factors**. **Verification methods** are used for verifying a user's identifier, such as an email address upon initial sign-up or when updating their profile. **Authentication factors** are used for authenticating a user, such as when they are signing in to your application.
+  **Verification methods** are different from **Authentication strategies**. **Verification methods** are used for verifying a user's identifier, such as an email address upon initial sign-up or when updating their profile. **Authentication strategies** are used for authenticating a user, such as when they are signing in to your application.
 </Callout>
 
 <Images 
