--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -70,34 +70,13 @@ Let's imagine that you want to require your users to sign up and sign in with th
 
 Ensure that **Email address** is enabled as an identifier. In the Clerk Dashboard, go to **User * Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. The toggle next to **Email address** should be on. If it's not, toggle it on and select **Apply Changes**. Users can now sign up and sign in with their email.
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-address.jpg"
-alt="The 'Email, Phone, Username' tab with an arrow pointing to the toggle next to 'Email address', toggled on."
-/>
-
 ### Configure email address settings
 
 Select the gear symbol next to **Email address** to open up the configuration settings. 
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-address-configuration.jpg"
-alt="The 'Email, Phone, Username' tab with an arrow pointing to the gear icon next to 'Email address'."
-/>
-
 ### Email verification
 
-From there, you can check the boxes next to **Email verification link** and **Email verification code**. Having all of these options toggled on will require users to provide an email on sign-up, require them to verify their email, and will allow them to verify their email with either a link or a code sent to their email.
-
-<Images 
-width={2490}
-height={1398}
-src="/docs/images/authentication/email-address-verification-methods.jpg"
-alt="The 'Email address' configuration settings with all options toggled on, and with a red outline around the 'Verification Methods' section."
-/>
+A modal titled **Email address** should open. At the bottom of the modal, there is a section titled **Verification methods**. You can check the boxes next to **Email verification link** and **Email verification code**. Having all of these options toggled on will require users to provide an email on sign-up, require them to verify their email, and will allow them to verify their email with either a link or a code sent to their email.
 
 ### Allow passwordless sign-in
 
@@ -106,7 +85,7 @@ In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username]
 <Images 
 width={3024}
 height={1652}
-src="/docs/images/authentication/email-address-verification.jpg"
+src="/docs/images/authentication/email-address-verification.webp"
 alt="The 'Authentication strategies' section under 'Email, Phone, Username' tab with a red arrow pointing to the 'Email verification link' toggle and 'Email verification code, both toggled on. There is also a red arrow pointing to the 'Apply changes' button."
 />
 
@@ -136,34 +115,13 @@ Let's imagine that your application is going to be exclusively used by people on
 
 Ensure that **Phone number** is enabled as an identifier. In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. The toggle next to **Phone number** should be on. If it's not, toggle it on and select **Apply Changes**. Users can now sign up and sign in with their phone number.
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/phone-number.jpg"
-alt="The 'Email, Phone, Username' tab with an arrow pointing to the toggle next to 'Phone number', toggled on."
-/>
-
 Note how the toggle for **Email address** is off, because in this example, your application is prioritizing a mobile-first approach.
 
 ### Configure phone number settings
 
 Select the gear symbol next to **Phone number** to open up the configuration settings. 
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/phone-number-configuration.jpg"
-alt="The 'Email, Phone, Username' tab with an arrow pointing to the gear icon next to 'Phone number'."
-/>
-
-Because in this example, your application is mobile-first, you should have all of these options toggled on. Having all of these options toggled on will require users to provide a phone number on sign-up, require them to verify their phone number, and will allow them to verify their phone number with a code sent to their phone.
-
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/phone-number-configuration-settings.jpg"
-alt="The 'Phone number' configuration settings with all options toggled on."
-/>
+A modal titled **Phone number** should open. Because in this example, your application is mobile-first, you should have all of these options toggled on. Having all of these options toggled on will require users to provide a phone number on sign-up, require them to verify their phone number, and will allow them to verify their phone number with a code sent to their phone.
 
 ### Allow users to sign in with an SMS code
 
@@ -172,7 +130,7 @@ In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username]
 <Images 
 width={3024}
 height={1652}
-src="/docs/images/authentication/sms-verification.jpg"
+src="/docs/images/authentication/sms-verification.webp"
 alt="The 'Authentication strategies' section under 'Email, Phone, Username' tab with a red arrow pointing to the 'SMS Verifcation Code' toggle, toggled on. There is also a red arrow pointing to the 'Apply changes' button."
 />
 
@@ -198,40 +156,19 @@ Let's imagine that you want your users to sign in with Social OAuth or with a co
 
 Users won't need an email or password, so you can turn those off. In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**.  Toggle off **Email address** and **Phone number**. Select **Apply changes** in the bottom right corner.
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-phone-off.jpg"
-alt="The 'Email, Phone, Username' tab with a red arrow pointing to the toggle next to 'Email address' and 'Phone number', both toggled off. There is also a red arrow pointing to the 'Apply changes' button."
-/>
-
 ### Enable social connections
  
 In the Clerk Dashboard, go to **User & Authentication > [Social connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**.
 
-Select the OAuth providers that will be used to authenticate your users. In this example, Google is selected.
-
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/social-connection-google.jpg"
-alt="The 'Social Connections' tab under the 'User & Authentication' section with a red arrow pointing to the 'Google' toggle, which is toggled on."
-/>
+Select the OAuth providers that will be used to authenticate your users, such at GitHub or Google.
 
 ### Enable Web3
 
 In the Clerk Dashboard, go to **User & Authentication > [Web3](https://dashboard.clerk.com/last-active?path=user-authentication/web3)**.
-Toggle on the Web3 provider.
-
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/web3.jpg"
-alt="The 'Web3' tab under the 'User & Authentication' section with a red arrow pointing to the 'Metamask' toggle, which is toggled on."
-/>
+Toggle on the Web3 provider. Currently, Clerk supports MetaMask.
 
 ### Finished!
 
-Now, when a user signs up or signs in to your application, users can do so with Google or Metamask. For more information on setting up different social providers, see the [Social Connections guide](/docs/authentication/social-connections/overview).
+Now, when a user signs up or signs in to your application, users can do so with the social provider you selected, or with Metamask. For more information on setting up different social providers, see the [Social Connections guide](/docs/authentication/social-connections/overview).
 
 </Steps>
