update headings to use title-case; update screenshots for new dashboard design

--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -1,9 +1,9 @@
 ---
-title: Sign-in options | Authentication
+title: Sign-in Options | Authentication
 description: Clerk provides a large selection of options for managing your user's sign-in experience.
 ---
 
-# Sign-in options
+# Sign-in Options
 
 Clerk provides a large selection of options for managing your user's sign-in experience. Clerk makes it easy to customize the way signing in works in your application, whether your users will be authenticating with [Passwords](/docs/custom-flows/email-password), [Magic Links](/docs/custom-flows/magic-links), [One-time Passcodes](/docs/custom-flows/email-sms-otp), or through a [Social OAuth provider](/docs/authentication/social-connections/overview).
 
@@ -84,7 +84,7 @@ In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username]
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-address-verification.webp"
-alt="The 'Authentication strategies' section under 'Email, Phone, Username' tab with a red arrow pointing to the 'Email verification link' toggle and 'Email verification code, both toggled on. There is also a red arrow pointing to the 'Apply changes' button."
+alt="The 'Authentication strategies' section under 'Email, Phone, Username' tab with a purple arrow marked '1' pointing to the 'Email verification link' toggle and a purple arrow marked '2' pointing to the 'Email verification code' toggle. Both are toggled on. There is a purple arrow marked '3' pointing to the 'Apply changes' button."
 />
 
 ### Finished!
@@ -127,7 +127,7 @@ In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username]
 width={3024}
 height={1652}
 src="/docs/images/authentication/sms-verification.webp"
-alt="The 'Authentication strategies' section under 'Email, Phone, Username' tab with a red arrow pointing to the 'SMS Verifcation Code' toggle, toggled on. There is also a red arrow pointing to the 'Apply changes' button."
+alt="The 'Authentication strategies' section under 'Email, Phone, Username' tab with a purple arrow marked '1' pointing to the 'SMS Verifcation Code' toggle, toggled on. There is a purple arrow marked '2' pointing to the 'Apply changes' button."
 />
 
 ### Finished!
