--- a/docs/authentication/configuration/sign-up-options.mdx
+++ b/docs/authentication/configuration/sign-up-options.mdx
@@ -1,9 +1,9 @@
 ---
-title: Sign-up options | Authentication
+title: Sign-up Options | Authentication
 description: Clerk provides various options for setting up a sign-up flow.
 ---
 
-# Sign-up options
+# Sign-up Options
 
 Clerk provides various options for setting up a sign-up flow. These options are configurable from the [Clerk Dashboard](https://dashboard.clerk.com/). When a new application is created, you will be presented with the following screen:
 
@@ -18,7 +18,7 @@ In addition to the application name set for your instance, there will be standar
 
 You can always make changes to your sign-up options after your application has been created by visiting the Clerk Dashboard and navigating to the **User & Authentication** settings.
 
-## Choose identifiers
+## Choose Identifiers
 
 From the application configuration screen, you must choose one of the following identifiers: **email address**, **phone number**, or **username**. You can select multiple identifiers if you like, but at least one is required to continue.
 
@@ -32,7 +32,7 @@ Choosing **username** as the identifier enables users to sign up without requiri
   If you opt not to collect any contact information, you could choose **Username** and later turn it off in settings and only authenticate with an OAuth social provider.
 </Callout>
 
-## Choose authentication strategy
+## Choose Authentication Strategy
 
 There are two available authentication strategies to choose from: **password** or **passwordless**.
 
@@ -40,20 +40,20 @@ Choosing a **password** strategy requires users to set a password during the sig
 
 Choosing a **passwordless** strategy involves a user signing up with an email address or phone number and then receiving a one-time verification code to complete the authentication process. While a one-time code is the default passwordless option, an email verification link (also known as a [magic link](/docs/custom-flows/magic-links)) is another passwordless authentication option that can later be enabled in settings.
 
-## Choose social login providers
+## Choose Social Login Providers
 
 Clerk offers a number of [Social Login providers](/docs/authentication/social-connections/oauth) that can be used during sign up and sign in. What makes the OAuth with Social Login providers appealing is that users often won't need to enter additional contact information since the provider already has it. The Social Login process is smart enough to automatically convert the sign up process of an existing user into a sign in flow, and the reverse is also true.
 
 For each provider, Clerk offers a shared profile that can be used for development instances. This makes it easy to get up and running and test your Social Logins right away. However, production instances must use a custom profile with your own credentials.
 
-## Choose Web3 authentication
+## Choose Web3 Authentication
 
 Clerk provides [Web3 authentication](/docs/users/web3) as an option with MetaMask. As part of validating the accuracy of the returned Web3 account address, Clerk handles the signing of a transaction and verifying the signature. Because sign-in with MetaMask uses the same abstraction as our other authentication strategies, like passwords or magic links, other Clerk features like multi-factor authentication and profile enrichment work for MetaMask users out-of-the-box.
 
-## Set up multifactor authentication
+## Set Up Multifactor Authentication
 
 Although not available as an option in the initial new application screen, you can opt to turn on multifactor authentication (MFA) from the configuration screen. In the Clerk Dashboard, go to **User & Authentication > [Multifactor](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor)** and toggle on the multi-factor options you would like to enable. For more information on how to set up multifactor authentication, check out our [detailed guide](/docs/custom-flows/mfa#overview).
 
-## Set sign-up restrictions
+## Set Sign-up Restrictions
 
 Clerk provides a set of restriction options designed to provide you with enhanced control over who can gain access to your application. Through these restriction settings, you can limit sign-ups or prevent accounts with specific identifiers from accessing your application.  These identifiers can be email addresses, phone numbers, and even entire domains. Learn more about restrictions in our [detailed guide](/docs/authentication/configuration/restrictions).
