--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -1,9 +1,9 @@
 ---
-title: Magic links
+title: Magic Links
 description: Learn how to authenticate or verify users with magic links.
 ---
 
-# Magic links
+# Magic Links
 
 Clerk supports passwordless authentication with magic links, which lets users sign in and sign up without having to remember a password. During login or registration, users will be asked to enter their email address. They will receive an email message with a link that can be clicked in order to complete the authentication process.
 
@@ -19,7 +19,7 @@ Your users will still be able to choose an alternative authentication (or verifi
   Looking for one-time code (OTP) authentication? Check out our [one-time code authentication](/docs/custom-flows/email-sms-otp) guide.
 </Callout>
 
-## Magic link flow
+## Magic Link Flow
 
 Magic links can be used to easily authenticate users or verify their email addresses. Clerk will take care of the plumbing and allow you to offer a seamless experience to your users. The magic link flow looks like this:
 
@@ -38,29 +38,26 @@ Clerk provides a highly flexible API that allows you to hook into any of the abo
 
 We take care of the boring stuff, like efficient polling, secure session management, and different device authentication so you can focus on your application code.
 
-## Before you start
+## Before You Start
 
 - You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 - You need to install the correct SDK for your application. You can find steps on how to do so through Clerk's [quickstart](/docs/quickstarts/overview) guides.
 
-## Configuration
+## Set Up Magic Link Authentication in Your Clerk Application
 
-Magic link authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication strategies** section of this page, choose **Email verification link** as the authentication strategy.
+To enable magic link authentication, you need to configure your instance to allow magic links. You can do this through the Clerk Dashboard or by creating a custom flow using the Clerk API.
+
+### Enable Magic Link Authentication in the Clerk Dashboard
+
+Magic link authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. Ensure that you've configured your application instance to request the user's email address. Users can receive magic links only via email messages. In the **Contact information** section, **Email address** should be toggled on.
+
+Then, in the **Authentication strategies** section of this page, choose **Email verification link** as the authentication strategy.
 
 <Images 
   width={3024}
   height={1654}
   src="/docs/images/custom-flows/email-verification-link.webp"
-  alt="The 'Authentication strategies' section of the 'Email, Phone, and Username' page in the Clerk dashboard. There is a red arrow pointing to the 'Email verification link' toggle, which is toggled on."
-/>
-
-Don't forget that you also need to make sure you've configured your application instance to request the user's email address. Users can receive magic links only via email messages. Make sure you toggle on **Email address** under the **Contact information** section. 
-
-<Images 
-  width={3024}
-  height={1654}
-  src="/docs/images/custom-flows/toggle-email-address.jpg"
-  alt="The 'Contact information' section of the 'Email, Phone, and Username' page in the Clerk dashboard. There is a red arrow pointing to the 'Email address' toggle, which is toggled on."
+  alt="The 'Authentication strategies' section of the 'Email, Phone, and Username' page in the Clerk dashboard. There is a purple arrow marked '1' pointing to the 'Email verification link' toggle, which is toggled on."
 />
 
 If you click on the **Settings cog** icon next to **Email address**, the email address configuration screen will pop open. You can toggle on **Require** if you want to make sure that all users have an email address associated with their profile. 
@@ -71,14 +68,7 @@ You can also find the **Verification methods** section on this screen. Here, you
   **Verification methods** are different from **Authentication strategies**. **Verification methods** are used for verifying a user's identifier, such as an email address upon initial sign-up or when updating their profile. **Authentication strategies** are used for authenticating a user, such as when they are signing in to your application.
 </Callout>
 
-<Images 
-  width={3024}
-  height={1654}
-  src="/docs/images/custom-flows/email-configuration-settings.jpg"
-  alt="The 'Email address' configuration settings modal. There is a red arrow pointing to the Settings cog next to 'Email address', showing where a user must click to open this modal. In this modal, there is a red arrow pointing to the 'Require' toggle, which is toggled on. There is also a red box surrounding the 'Verifcation methods' section, and within this section, there are red arrows pointing to 'Email verification link' and 'Email verification code' check boxes, both checked."
-/>
-
-## Custom flow
+### Enable Magic Link Authentication Using the Clerk API
 
 In case one of the above integration methods doesn't cover your needs, you can make use of lower-level commands and create a completely custom magic link authentication flow.
 
@@ -86,7 +76,7 @@ In case one of the above integration methods doesn't cover your needs, you can m
   You still need to configure your instance in order to enable magic link authentication, as described at the top of this guide.
 </Callout>
 
-### Sign up using a custom flow
+#### Sign Up Using the Clerk API
 
 Registration with magic links follows a set of steps that require users to enter their email address as an authentication identifier and click on a link that's delivered to them via email message.
 
@@ -485,7 +475,7 @@ cancelMagicLinkFlow();
 ```
 </CodeBlockTabs>
 
-### Sign in using a custom flow
+#### Sign In Using the Clerk API
 
 Signing users into your application is probably the most popular use case for magic links. Users enter their email address and then click on a link that's delivered to them via email message in order to log in.
 
@@ -883,7 +873,7 @@ cancelMagicLinkFlow();
 ```
 </CodeBlockTabs>
 
-### Email address verification
+#### Set Up Email Address Verification Using the Clerk API
 
 Magic links can also provide a nice user experience for verifying email addresses that users add when updating their profiles. The flow is similar to one-time code verification, but users need only click on the magic link; there's no need to return to your app.
 
