--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -1,11 +1,11 @@
 ---
-title: Email/SMS OTP
+title: Email/SMS OTP (One-time Password)
 description: Learn how to send one-time codes (OTP) to authenticate users.
 ---
 
-# Email/SMS OTP
+# Email/SMS OTP (One-time Password)
 
-Clerk supports passwordless authentication, which lets users sign in and sign up without having to remember a password. During sign-in, users will be asked to enter their identifier (email address or phone number) to receive a one-time code and complete the authentication process.
+Clerk supports passwordless authentication, which lets users sign in and sign up without having to remember a password. During sign-in, users will be asked to enter their identifier (email address or phone number) to receive a one-time password (OTP), also referred to as a one-time code, and complete the authentication process.
 
 Arguably, passwordless authentication provides greater security and a better user experience than traditional passwords. However, it is not without its downsides, and often still boils down to the email providers "knowledge based factor" instead of yours.
 
@@ -21,18 +21,22 @@ The rest of this guide will explain how to set up passwordless authentication us
   Looking for two-factor authentication (2FA)? Check out our [Multi-factor authentication](/docs/custom-flows/mfa) guide.
 </Callout>
 
-## Before you start
+## Before You Start
 
 - You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 - You need to install the correct SDK for your application. You can find steps on how to do so through Clerk's [quickstart](/docs/quickstarts/overview) guides.
 
-## Configuration
+## Set Up Passwordless Authentication For Your Clerk Application
+
+To enable passwordless authentication, you need to configure your instance to allow passwordless sign-ins. You can do this through the Clerk Dashboard or by creating a custom flow using the Clerk API.
+
+### Enable Passwordless Authentication in the Clerk Dashboard
 
 Passwordless authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication strategies** section of this page, choose one of the available passwordless authentication strategies that send one-time codes.
 
 For more information on how to configure passwordless authentication, check out the [Sign-in options](/docs/authentication/configuration/sign-in-options) guide.
 
-## Custom flow
+### Enable Passwordless Authentication Using the Clerk API
 
 In case one of the above integration methods doesn't cover your needs, you can make use of lower-level commands and create a completely custom passwordless authentication flow.
 
@@ -40,7 +44,7 @@ In case one of the above integration methods doesn't cover your needs, you can m
   You still need to configure your instance in order to enable passwordless authentication, as described at the top of this guide.
 </Callout>
 
-### Sign up using a custom flow
+#### Sign Up Using a Custom Flow
 
 The passwordless sign-up flow is a process that requires users to provide their authentication identifier (email address or phone number) and a one-time code that is sent to them. The important thing to note here is that a user's email address or phone number needs to be verified before the registration is completed.
 
@@ -210,7 +214,7 @@ Let's see the above in action. If you want to learn more about sign-ups, check o
 
 You can also verify your users via their email address. There's two additional helper methods: [`prepareEmailAddressVerification`](/docs/references/javascript/sign-up/email-verification#prepare-email-address-verification) and [`attemptEmailAddressVerification`](/docs/references/javascript/sign-up/email-verification#attempt-email-address-verification) that work the same way as their phone number counterparts do. You can find all available methods in the [`SignUp`](/docs/references/javascript/sign-in/sign-in) object documentation. 
 
-### Sign in using a custom flow
+#### Sign In Using a Custom Flow
 
 The passwordless sign-in flow is a process that requires users to provide their authentication identifier (email address or phone number) and subsequently a one-time code that is sent to them. We call this one-time code the first factor of authentication.
 
