--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -18,7 +18,7 @@ Methods for [changing a member's role](/docs/references/backend/organization/upd
 {/* TODO (DOCS-316): Update and validate these examples. */}
 
 <CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
-```tsx filename="pages/organizations/[id].ts"
+```tsx filename="pages/organizations/[id].tsx"
 import { useState, useEffect, ChangeEventHandler, useRef } from "react"
 import { useOrganization, useUser } from "@clerk/nextjs"
 import type { OrganizationCustomRoleKey } from "@clerk/types"
