undo title casing for headings; stick with sentence casing

--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -1,9 +1,9 @@
 ---
-title: Sign-in Options | Authentication
+title: Sign-in options | Authentication
 description: Clerk provides a large selection of options for managing your user's sign-in experience.
 ---
 
-# Sign-in Options
+# Sign-in options
 
 Clerk provides a large selection of options for managing your user's sign-in experience. Clerk makes it easy to customize the way signing in works in your application, whether your users will be authenticating with [Passwords](/docs/custom-flows/email-password), [Magic Links](/docs/custom-flows/magic-links), [One-time Passcodes](/docs/custom-flows/email-sms-otp), or through a [Social OAuth provider](/docs/authentication/social-connections/overview).
 
@@ -13,7 +13,7 @@ Clerk provides a large selection of options for managing your user's sign-in exp
 
 You can create your sign-in flow with Clerk's [Account Portal pages](/docs/account-portal/overview) or [prebuilt components](/docs/components/overview). If you need more control over your flow, you can build your own by using [React hooks](/docs/custom-flows/use-sign-up) or by using the methods of the [`SignIn` object](/docs/references/javascript/sign-in/sign-in).
 
-## Getting Started
+## Getting started
 
 When a new application is created, you will be presented with the following screen:
 
@@ -34,7 +34,7 @@ Identifiers are how your application recognizes an individual user.
 - Phone number
 - Username
 
-### Authentication Strategy
+### Authentication strategy
 
 The authentication strategy refers to whether your application will rely on passwords or a passwordless method of authentication.
 
@@ -43,7 +43,7 @@ The authentication strategy refers to whether your application will rely on pass
   - [One-time password (OTP)](/docs/custom-flows/email-sms-otp) - To sign in, the user will receive a code to their email or phone.
   - [Magic Link](/docs/custom-flows/magic-links) - To sign in, the user will click a link sent to their email.
 
-### Connected Accounts
+### Connected accounts
 
 Connected accounts are third-party sources used to authenticate your users.
 
@@ -52,31 +52,31 @@ Connected accounts are third-party sources used to authenticate your users.
 
 Once you've selected the first methods you would like to try, click **Create Application**. If you're not sure about what you want to use, don't worry. You can change any of these settings from the Clerk Dashboard later on.
 
-## Update Sign-in Options
+## How to update sign-in options
 
 If your initial sign-in choices aren't working out or if you want to add more options for your users, you can make changes by navigating to the Clerk Dashboard and opening the **User & Authentication** drop down. From there, you can make changes to the necessary settings. For example, if you decide you would like to add GitHub as a social login provider, you can do so by navigating to the [**Social Connections**](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) page and toggling on the GitHub provider.
 
-## Sign-in Examples
+## Sign-in examples
 
 Lets take a look at a few of the different sign-in options and how they can be combined to fit your application's needs.
 
-### Email Address Sign-in Options
+### Allow only email address as a sign-in option
 
 Let's imagine that you want to require your users to sign up and sign in with their email. You want to make sure the email they provided is verified before they can sign in. After their email is verified, users can sign in via passwordless methods: by either clicking a link or entering a one-time code sent to their email.
 
 <Steps>
 
-### Allow Users to Sign In Using Their Email
+### Allow users to sign in using their email
 
 Ensure that **Email address** is enabled as an identifier. In the Clerk Dashboard, go to **User * Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. The toggle next to **Email address** should be on. If it's not, toggle it on and select **Apply Changes**. Users can now sign up and sign in with their email.
 
-### Configure Email Address Settings
+### Configure email address authentication and verification settings
 
 Select the gear symbol next to **Email address** to open up the configuration settings. 
 
 A modal titled **Email address** should open. At the bottom of the modal, there is a section titled **Verification methods**. You can check the boxes next to **Email verification link** and **Email verification code**. Having all of these options toggled on will require users to provide an email on sign-up, require them to verify their email, and will allow them to verify their email with either a link or a code sent to their email.
 
-### Allow Users to Sign In with an Email Link or One-Time Code
+### Allow users to sign in with an email link or one-time code
 
 In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication strategies** section, toggle on **Email verification link** and **Email verification code**. This will allow users to sign in with either a link or a code sent to their email.
 
@@ -97,7 +97,7 @@ Now, when a user signs up or signs in to your application, Clerk will send a ver
 
 </Steps>
 
-### Phone + SMS Code Sign-in Options
+### Allow only phone number and SMS code as sign-in options
 
 <Callout>
   Phone number identifiers and SMS verification are Premium features that are only available on some plans. However, you can use these features in development instances for testing purposes. For more information, go to the Clerk Dashboard and navigate to the **[Plan & Billing](https://dashboard.clerk.com/last-active?path=plan-billing)** page.
@@ -107,19 +107,19 @@ Let's imagine that your application is going to be exclusively used by people on
 
 <Steps>
 
-### Allow Users to Sign In Using Their Phone Number
+### Allow users to sign in using their phone number
 
 Ensure that **Phone number** is enabled as an identifier. In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. The toggle next to **Phone number** should be on. If it's not, toggle it on and select **Apply Changes**. Users can now sign up and sign in with their phone number.
 
 Note how the toggle for **Email address** is off, because in this example, your application is prioritizing a mobile-first approach.
 
-### Configure Phone Number Settings
+### Configure phone number authentication and verification settings
 
 Select the gear symbol next to **Phone number** to open up the configuration settings. 
 
 A modal titled **Phone number** should open. Because in this example, your application is mobile-first, you should have all of these options toggled on. Having all of these options toggled on will require users to provide a phone number on sign-up, require them to verify their phone number, and will allow them to verify their phone number with a code sent to their phone.
 
-### Allow Users to Sign In with an SMS Code
+### Allow users to sign in with an SMS code
 
 In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication strategies** section, toggle on **SMS verification code**. This will allows users to sign in with a code sent to their phone.
 
@@ -140,23 +140,23 @@ Now, when a user signs up or signs in to your application, Clerk will send a ver
 
 </Steps>
 
-### Social OAuth + Web3 Sign-in Options
+### Allow only social OAuth and Web3 sign-in options
 
 Let's imagine that you want your users to sign in only with Social OAuth or with a connected Web3 account.
 
 <Steps>
 
-### Disable Email and Password
+### Disable email and password as sign-in options
 
 Users won't need an email or password, so you can turn those off. In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**.  Toggle off **Email address** and **Phone number**. Select **Apply changes** in the bottom right corner.
 
-### Enable Social Connections
+### Enable social connections as sign-in options
  
 In the Clerk Dashboard, go to **User & Authentication > [Social connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**.
 
 Select the OAuth providers that will be used to authenticate your users, such at GitHub or Google.
 
-### Enable Web3
+### Enable Web3 as a sign-in option
 
 In the Clerk Dashboard, go to **User & Authentication > [Web3](https://dashboard.clerk.com/last-active?path=user-authentication/web3)**.
 Toggle on the Web3 provider. Currently, Clerk supports MetaMask.
