--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -21,22 +21,22 @@ The rest of this guide will explain how to set up passwordless authentication us
   Looking for two-factor authentication (2FA)? Check out our [Multi-factor authentication](/docs/custom-flows/mfa) guide.
 </Callout>
 
-## Before You Start
+## Before you start
 
 - You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 - You need to install the correct SDK for your application. You can find steps on how to do so through Clerk's [quickstart](/docs/quickstarts/overview) guides.
 
-## Set Up Passwordless Authentication For Your Clerk Application
+## Set up passwordless authentication for your Clerk application
 
 To enable passwordless authentication, you need to configure your instance to allow passwordless sign-ins. You can do this through the Clerk Dashboard or by creating a custom flow using the Clerk API.
 
-### Enable Passwordless Authentication in the Clerk Dashboard
+### Enable passwordless authentication in the Clerk Dashboard
 
 Passwordless authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication strategies** section of this page, choose one of the available passwordless authentication strategies that send one-time codes.
 
 For more information on how to configure passwordless authentication, check out the [Sign-in options](/docs/authentication/configuration/sign-in-options) guide.
 
-### Enable Passwordless Authentication Using the Clerk API
+### Enable passwordless authentication using the Clerk API
 
 In case one of the above integration methods doesn't cover your needs, you can make use of lower-level commands and create a completely custom passwordless authentication flow.
 
@@ -44,7 +44,7 @@ In case one of the above integration methods doesn't cover your needs, you can m
   You still need to configure your instance in order to enable passwordless authentication, as described at the top of this guide.
 </Callout>
 
-#### Sign Up Using a Custom Flow
+#### Sign up using a custom flow (Clerk API)
 
 The passwordless sign-up flow is a process that requires users to provide their authentication identifier (email address or phone number) and a one-time code that is sent to them. The important thing to note here is that a user's email address or phone number needs to be verified before the registration is completed.
 
@@ -214,7 +214,7 @@ Let's see the above in action. If you want to learn more about sign-ups, check o
 
 You can also verify your users via their email address. There's two additional helper methods: [`prepareEmailAddressVerification`](/docs/references/javascript/sign-up/email-verification#prepare-email-address-verification) and [`attemptEmailAddressVerification`](/docs/references/javascript/sign-up/email-verification#attempt-email-address-verification) that work the same way as their phone number counterparts do. You can find all available methods in the [`SignUp`](/docs/references/javascript/sign-in/sign-in) object documentation. 
 
-#### Sign In Using a Custom Flow
+#### Sign in using a custom flow (Clerk API)
 
 The passwordless sign-in flow is a process that requires users to provide their authentication identifier (email address or phone number) and subsequently a one-time code that is sent to them. We call this one-time code the first factor of authentication.
 
