--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -13,14 +13,14 @@ User Impersonation can be useful for testing or debugging purposes. It is a powe
 
 However, please consider when and how you use User Impersonation. It is advised to seek the impersonated user's consent and respect your users' privacy.
 
-## How User Impersonation Works
+## How User Impersonation works
 
 Clerk allows developers or admins of an application to sign in as different users. The feature involves two parts:
 
 1. Get an actor token that can be used to sign in as a different user.
 2. Detect an impersonated session as soon as you're signed in.
 
-## Actor Tokens
+## Actor tokens
 
 Actor tokens are similar to [sign-in tokens](https://clerk.com/docs/reference/backend-api/tag/Sign-in-Tokens#operation/CreateSignInToken). They can be used for one-time logins, but they result in impersonated sessions. You can obtain an actor token from our [Backend API](https://clerk.com/docs/reference/backend-api/tag/Actor-Tokens#operation/CreateActorToken).
 
@@ -28,7 +28,7 @@ Actor tokens need to declare the impersonator user (**actor**) and the impersona
 
 You can also configure the validity duration of an actor token by setting an expiration time, but you can revoke it at any time.
 
-### Create an Actor Token from the Backend API
+### Create an actor token from the Backend API
 
 ```bash
 curl -X POST https://api.clerk.com/v1/actor_tokens -d '{ \
@@ -44,7 +44,7 @@ The above request will create an actor token that is valid for 600 seconds (10 m
 
 When creating actor tokens, the object that you pass as the `actor` parameter will end up in the authentication token's `act` claim. You can read more details in the [JWT claims](#jwt-claims) section of this document.
 
-### Revoke an Actor Token from the Backend API
+### Revoke an actor token from the Backend API
 
 ```bash
 curl -X POST https://api.clerk.com/v1/actor_tokens/act_2EL6mQKzeUtoRwGuLZsznyfkIsH/revoke
@@ -52,7 +52,7 @@ curl -X POST https://api.clerk.com/v1/actor_tokens/act_2EL6mQKzeUtoRwGuLZsznyfkI
 
 The above request will revoke the actor token with ID `act_2EL6mQKzeUtoRwGuLZsznyfkIsH` even if it's not expired yet. Revoked actor tokens can no longer be used for signing in.
 
-### Sign in with an Actor Token
+### Sign in with an actor token
 
 Actor tokens are consumed the same way as sign in tokens.
 
@@ -64,11 +64,11 @@ The [Clerk Frontend API](https://clerk.com/docs/reference/frontend-api/) will re
 
 If you're using [ClerkJS](/docs/references/javascript/overview) directly and implementing a custom sign in flow, you should provide the token when [creating a sign-in attempt](/docs/references/javascript/sign-in/sign-in#create).
 
-## How to Detect Impersonated Sessions
+## How to detect impersonated sessions
 
 Once a user is signed in as a different user, Clerk provides APIs and helper methods to distinguish an impersonated session from a regular session. It also provides the whole actor object, which contains information about the impersonator user.
 
-### JWT Claims
+### JWT claims
 
 Following the standard [actor claim of RFC 8693](https://www.rfc-editor.org/rfc/rfc8693.html#name-act-actor-claim), the Clerk session token includes an `act` claim. The `act.iss` claim is the referrer of the token. The `act.sid` claim is the session ID of the impersonated session. The `act.sub` claim is the ID of the impersonator.
 
@@ -98,7 +98,7 @@ The above JSON snippet shows what a Clerk session token looks like when a user i
   Note that when using a custom JWT template, the `{{session.actor}}` will need to be added as a claim in order to expose it.
 </Callout>
 
-### Detect Impersonated Sessions in the Frontend
+### Detect impersonated sessions in the frontend
 
 When working with frontend (client-side) code, you can easily detect impersonated sessions and gain access to the actor ID or other information from the `act` claim.
 
@@ -176,7 +176,7 @@ if (session.actor) {
 ```
 </CodeBlockTabs>
 
-### Detect Impersonated Sessions in the Backend
+### Detect impersonated sessions in the backend
 
 When working with backend code, Clerk provides middleware that can be used in Next.js API routes or directly in express-like Node.js applications. The middleware will provide information about impersonated sessions and the actor ID.
 
@@ -222,7 +222,7 @@ app.listen(3000, () => {
 ```
 </CodeBlockTabs>
 
-## Impersonate a User from the Clerk Dashboard
+## Impersonate a user from the Clerk Dashboard
 
 If you prefer, you can impersonate a user right from the **[Users](https://dashboard.clerk.com/last-active?path=users)** page in the Clerk Dashboard.
 
