feat: Override types for roles and permissions

--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -257,8 +257,7 @@ If you are not using React or any of the meta-frameworks we support, there's a g
     const canManageSettings = clerk.session.checkAuthorization({
       permission: "org:team_settings:manage"
     })
-
-````
+```
 </CodeBlockTabs>
 
 
@@ -329,4 +328,17 @@ You can pass a `role` the same way you can pass a `permission` in all the exampl
    ```
 </Tab>
 </Tabs>
-````
+
+
+## Add global TypeScript type for roles and permissions
+
+```tsx filename="types/globals.d.ts"
+export { };
+
+declare global {
+  interface ClerkAuthorization {
+    permission: '';
+    role: 'admin' | 'basic_member' | 'guest_member';
+  }
+}
+```
